2013-10-25  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/surface_param.m: (0.5.0)
	* matlab/test/test_surface_param.m: (0.5.0)

	- Rewrite method 'lmdscale', that was non-functional. Also, now
	parameters for fast marching are passed in param.options, and
	parameters for local neighbourhood MDS are passed in
	param.options2.

	- Correct help for 'cmdsmap'.

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.4.1)

	- Small, compute distances by column instead of by row.

	* matlab/PointsToolbox/surface_param.m: (0.4.0)
	* matlab/test/test_surface_param.m: (0.4.0)

	- Rewrite of methods 'isomap' and 'cmdsmap'. The first one now has
	an input syntax congruent with the method. The second one is the
	open surface classic MDS, that is, only valid for full distance
	matrices, using classic MDS to solve the parameterization.

	- Add 'lmdscale' for open surface with local neighbourhoods. But
	still needs correcting.

2013-10-21  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/scimat_lconvhull_smoothing.m: (0.7.0)

	- Move rasterization code to scimat_tri_to_raster().

	- Change order of output arguments. Now we provide the option of
	computing only the alpha-shape mesh. And then, if the user has
	requested the rasterization, this is computed too.

	- The rasterization method is now controlled by the string RASTER,
	rather than the previous boolean SAFE.

	* matlab/ManifoldToolbox/scimat_tri_to_raster.m: (0.2.0)

	- Replace previous code by quite similar code we had in
	scimat_lconvhull_smoothing.m().

	* Rename matlab/ManifoldToolbox/scimat_closed_surf_to_bw.m as
	matlab/ManifoldToolbox/scimat_tri_to_raster.m: (0.2.0)
	* matlab/ManifoldToolbox/delaunay_sphere.m:

2013-10-17  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/tri_find_nonmanifold_vertex.m: (0.1.0)

	- TRI_FIND_NONMANIFOLD_VERTEX Find indices of non-manifold
	vertices in a triangular mesh.

	* matlab/FileFormatToolbox/scinrrd_im2nrrd.m: (0.1.1)
